MODORDERS-1361. Add displayToPublic and Sequence fields to schema