@@ -137,12 +137,14 @@ public class CheckinHelperTest {
 
     ToBeCheckedIn toBeCheckedIn2 = new ToBeCheckedIn().withPoLineId(poLine1);
     CheckInPiece checkInPiece3 = new CheckInPiece().withId(UUID.randomUUID().toString()).withCreateItem(true).withDisplaySummary("3")
-      .withEnumeration("Enum1").withCopyNumber("CN1").withChronology("Ch1").withDiscoverySuppress(true).withDisplayOnHolding(true);
+      .withEnumeration("Enum1").withCopyNumber("CN1").withChronology("Ch1").withDiscoverySuppress(true).withDisplayOnHolding(true)
+      .withDisplayToPublic(true).withSequenceNumber(10);
     toBeCheckedIn2.withCheckInPieces(List.of(checkInPiece3));
 
     ToBeCheckedIn toBeCheckedIn3 = new ToBeCheckedIn().withPoLineId(poLine2);
     CheckInPiece checkInPiece4 = new CheckInPiece().withId(UUID.randomUUID().toString()).withCreateItem(true).withDisplaySummary("4")
-      .withEnumeration("Enum2").withCopyNumber("CN2").withChronology("Ch2").withDiscoverySuppress(false).withDisplayOnHolding(false);
+      .withEnumeration("Enum2").withCopyNumber("CN2").withChronology("Ch2").withDiscoverySuppress(false).withDisplayOnHolding(false)
+      .withDisplayToPublic(false).withSequenceNumber(20);
     toBeCheckedIn3.withCheckInPieces(List.of(checkInPiece4));
 
     checkinCollection.withToBeCheckedIn(List.of(toBeCheckedIn1, toBeCheckedIn2, toBeCheckedIn3));
@@ -164,13 +166,17 @@ public class CheckinHelperTest {
     assertEquals("Ch1", actCheckInPiece1.getChronology());
     assertEquals(true, actCheckInPiece1.getDiscoverySuppress());
     assertEquals(true, actCheckInPiece1.getDisplayOnHolding());
-    CheckInPiece actCheckInPiece2 = map.get(poLine2).get(0);
+    assertEquals(true, actCheckInPiece1.getDisplayToPublic());
+    assertEquals(10, actCheckInPiece1.getSequenceNumber());
+    CheckInPiece actCheckInPiece2 = map.get(poLine2).getFirst();
     assertEquals("4", actCheckInPiece2.getDisplaySummary());
     assertEquals("Enum2", actCheckInPiece2.getEnumeration());
     assertEquals("CN2", actCheckInPiece2.getCopyNumber());
     assertEquals("Ch2", actCheckInPiece2.getChronology());
     assertEquals(false, actCheckInPiece2.getDiscoverySuppress());
     assertEquals(false, actCheckInPiece2.getDisplayOnHolding());
+    assertEquals(false, actCheckInPiece2.getDisplayToPublic());
+    assertEquals(20, actCheckInPiece2.getSequenceNumber());
   }
 
   @Test
@@ -189,6 +195,8 @@ public class CheckinHelperTest {
         .withCopyNumber("copyNumber")
         .withAccessionNumber("accessionNumber")
         .withDisplayOnHolding(true)
+        .withDisplayToPublic(true)
+        .withSequenceNumber(15)
         .withDiscoverySuppress(true)
         .withSupplement(true)
         .withBarcode("barcode")
@@ -212,6 +220,8 @@ public class CheckinHelperTest {
     assertEquals("copyNumber", piece.getCopyNumber());
     assertEquals("accessionNumber", piece.getAccessionNumber());
     assertTrue(piece.getDisplayOnHolding());
+    assertTrue(piece.getDisplayToPublic());
+    assertEquals(15, piece.getSequenceNumber());
     assertTrue(piece.getDiscoverySuppress());
     assertTrue(piece.getSupplement());
     assertEquals("barcode", piece.getBarcode());
@@ -302,6 +312,8 @@ public class CheckinHelperTest {
         .withId(pieceId)
         .withDisplaySummary("displaySummary")
         .withDisplayOnHolding(true)
+        .withDisplayToPublic(true)
+        .withSequenceNumber(25)
         .withDiscoverySuppress(true)
         .withSupplement(true)
         .withBarcode("12345")
